# StableDira

./: Cargo.toml  README.md  generate_message_ts.sh  optimize.sh  repo-to-text_2025-04-18-01-27-25-UTC.txt  repo-to-text_2025-04-18-01-59-56-UTC.txt
message_types/: ExecuteMsgTypes.ts  InstantiateMsgTypes.ts  QueryMsgTypes.ts
quint/: stable_dira_stubs.qnt
schema/: execute_msg.json  instantiate_msg.json  query_msg.json
src/: contract.rs  error.rs  msg.rs  schema.rs  state.rs
tests/: integration.rs
