[package]
name = "stable-dira"
version = "0.1.0"
authors = ["Rithik Kumar S <rithikum123@gmail.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
# backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = "2.1.5"
cosmwasm-storage = "1.5.2"
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
cw20 = "2.0.0"
# cosmwasm-std = "2.1.4"
# cosmwasm-storage = "1.5.2"
# cw-storage-plus = "2.0.0"
# cw2 = "2.0.0"
# cw20 = "2.0.0"
# cw721 = "0.18.0"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-wasm = "1.0.1"
serde_json = "1.0.133"
thiserror = { version = "2.0" }
cosmwasm-schema = { version = "2.1.5" }
# wasmer-vm = "5.0.1"

[dev-dependencies]
# STUFF BELOW IS REQUIRED ONLY FOR TEST BUILDS
cosmwasm-vm = "2.1.5"
getrandom = { version = "0.2.15", features = ["js"] }

[[bin]]
name = "schema"
path = "src/schema.rs"

